# cript

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  UV_GUIDE.md  pyproject.toml  setup.bat  setup.sh
.github/workflows/: tests.yml  uv-tests.yml
docs/: API.md  DEPLOYMENT.md  PROTOCOL.md
examples/: 01_basic.py  02_attacks.py  03_network.py  __init__.py
src/cript/: README.md  __init__.py  __main__.py  config.py
src/cript/core/: __init__.py  message.py  protocol.py
src/cript/crypto/: __init__.py  hkdf.py  keygen.py  ratchet.py
src/cript/network/: __init__.py  client.py  server.py
tests/: __init__.py  test_protocol.py
