[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cript"
version = "1.0.0"
description = "Cryptographic Ratcheting Implementation Protocol - Sender Keys Protocol with Signature Ratcheting for Group Messaging"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Álvaro Fernández Ramos},
]
keywords = ["cryptography", "group-messaging", "sender-keys", "signature-ratcheting", "protocol", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications",
]

dependencies = [
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/alvarofdezr/cript"
Documentation = "https://github.com/alvarofdezr/cript/tree/main/docs"
Repository = "https://github.com/alvarofdezr/cript.git"
Issues = "https://github.com/alvarofdezr/cript/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cript"]
